// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepositoryViewBase.vue error -1 renders correctly 1`] = `
<layout-stub title="Bothub">
  <div class="rpstr-vw-bs">
    <div class="rpstr-vw-bs__loading">
      <bhloading-stub></bhloading-stub>
    </div>
  </div>
  <!---->
  <!---->
  <!---->
</layout-stub>
`;

exports[`RepositoryViewBase.vue error 404 renders correctly 1`] = `
<layout-stub title="Bothub">
  <div class="rpstr-vw-bs">
    <div class="rpstr-vw-bs__loading">
      <bhloading-stub></bhloading-stub>
    </div>
  </div>
  <!---->
  <!---->
  <!---->
</layout-stub>
`;

exports[`RepositoryViewBase.vue loading renders correctly 1`] = `
<layout-stub title="Bothub">
  <div class="rpstr-vw-bs">
    <div class="rpstr-vw-bs__loading">
      <bhloading-stub></bhloading-stub>
    </div>
  </div>
  <!---->
  <!---->
  <!---->
</layout-stub>
`;

exports[`RepositoryViewBase.vue renders correctly 1`] = `
<layout-stub title="null/">
  <div class="rpstr-vw-bs">
    <div class="rpstr-vw-bs__loading">
      <bhloading-stub></bhloading-stub>
    </div>
  </div>
  <trainmodal-stub requirementstotrain="[object Object]" languagesreadyfortrain="[object Object]" languageswarnings="[object Object]"></trainmodal-stub>
  <!---->
  <requestauthorizationmodal-stub repositoryuuid="null"></requestauthorizationmodal-stub>
</layout-stub>
`;
